-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.588 2009-08-17 16:42:47 remko Exp $
-----------------------------------------------------------------------------------------

2009-08-17	remko
	* gmt_plot.c, GMT_Chapter_{3,6}.tex:	Documentation on -JPoly added.
	* gmt_map.c:		Made frame and annotation of polyconic work properly.

2009-08-15	remko
	* gmt_proj.[ch], gmt_map.c, gmt_init.c:	First stab at introducing polyconic projection.
				Not documented yet, but seems to work (-JPoly).

2009-07-24	pwessel
	* gmt_support.c:	The routine that checks if a points is inside or outside a
				polar cap had trouble when the points longitude exactly
				equalled a point on the polygon since round-off would 
				cause our test to fail.  Now hopefully fool-proof.
2009-07-23	pwessel
	* psmask.c:		With -D, the internal di,dj constant was set way too large.

2009-07-22	pwessel
	* gmt_shore.[ch]:	The -A+r|+l option was premature as more info in the GSHHS
				netcdf files are needed to properly skip features.  GSHHS 2.1
				will have this information so pscoast et al need to check
				for versions before attempting to use any of the +<modifiers>
2009-07-18	mtchandl
	* mgd77/mgd77sniffer.c:	Bug in -I option; needed to set bitpattern for bad faa.

2009-07-18	remko
	* pslib.c, pslib_inc.h:		Added option to reduce all color to gray scale.
	* gmt_init.c, gmtdefaults.txt:	Added setting PS_COLOR = gray.

2009-07-15	pwessel
	* grdmask.c:		Free some memory that was ignored.

-----------------------------------------------------------------------------------------
2009-07-15
	* GMT 4.5.0 finalized and released
-----------------------------------------------------------------------------------------

2009-07-13	pwessel
	* surface.c:		When data lie exactly on a plane and -L was used, surface tried to free memory
				for constraints that never needed to be allocated.
2009-07-10	pwessel