@@ -1,4 +1,4 @@
-#	$Id: Makefile,v 1.46 2009-06-24 21:25:10 jluis Exp $
+#	$Id: Makefile,v 1.47 2009-08-17 17:52:22 remko Exp $
 #
 # makefile for x2sys directory
 #
@@ -13,11 +13,14 @@ include $(GMTSRCDIR)gmtalldeps.macros
 INCLUDES	= -I$(srcdir) -I../mgg -I../mgd77 -I$(NETCDF_INC)
 ALLLIB		= -L../mgd77 -lmgd77 -L../mgg -lgmt_mgg -L.. -lgmt $(LIBS)
 
-PROGS_H		= x2sys.h
+LIB_O		= x2sys.o
+LIB_H		= x2sys.h
+LIB		= libx2sys.$(LIBEXT)
+
+PROGS_H		=
 PROGS_O		= x2sys_init.o x2sys_put.o x2sys_get.o x2sys_binlist.o x2sys_datalist.o \
 		  x2sys_cross.o x2sys_list.o x2sys_report.o x2sys_solve.o x2sys_merge.o
 MAN1		= $(PROGS_O:.o=.1)
-LIB		= libx2sys.$(LIBEXT)
 
 #---------------------------------------------------------------
 #	software targets
@@ -27,6 +30,10 @@ all:		$(PROGS)
 
 install:	all
 		$(INSTALL) $(PROGS) $(bindir)
+		if [ ! $(includedir) = $(srcdir) ]; then \
+			$(INSTALL) -d $(includedir); \
+			$(INSTALL) -m 644 $(LIB_H) $(includedir); \
+		fi
 		if [ ! $(libdir) = $(srcdir) ]; then \
 			$(INSTALL) -d $(libdir); \
 			$(INSTALL) -m 644 $(LIB:.$(LIBEXT)=.a) $(libdir); \
@@ -34,14 +41,17 @@ install:	all
 		fi
 		if [ $(LIBEXT) != a ] && [ $(SL) != $(SL_VERSION) ]; then \
 			cd $(libdir) ; \
-			\mv -f libx2sys.$(SL) libx2sys.$(SL_VERSION) ; \
-			$(LN_S) libx2sys.$(SL_VERSION) libx2sys.$(SL) ; \
+			\mv -f libx2sys.{$(SL),$(SL_VERSION)} ; \
+			$(LN_S) libx2sys.{$(SL_VERSION),$(SL)} ; \
 		fi
 
 uninstall:	
 		cd $(bindir); \rm -f $(PROGS)
+		if [ ! $(includedir) = $(srcdir) ]; then \
+			cd $(includedir); \rm -f $(LIB_H);\
+		fi
 		if [ ! $(libdir) = $(srcdir) ]; then \
-			cd $(libdir); \rm -f $(LIB) $(LIB:.$(LIBEXT)=.a)
+			cd $(libdir); \rm -f libx2sys.{a,$(SL),$(SL_VERSION)}; \
 		fi
 
 install-man:	$(MAN1)
@@ -59,8 +69,8 @@ spotless::	clean
 #	object file dependencies
 #-------------------------------------------------------------------------------
 
-$(PROGS_O):	$(GMT_H) $(PROGS_H)
-x2sys.o:	$(PROGS_H) $(GMT_H)
+$(PROGS_O):	$(LIB_H) $(PROGS_H) $(GMT_H)
+$(LIB_O):	$(LIB_H) $(GMT_H)
 
 #-------------------------------------------------------------------------------
 #	library
@@ -68,7 +78,7 @@ x2sys.o:	$(PROGS_H) $(GMT_H)
 
 .SUFFIXES:	.$(SL)
 
-libx2sys.a:	x2sys.o
+libx2sys.a:	$(LIB_O)
 		$(AR) cvr $@ $?
 		$(RANLIB) $@
 
